--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -d src/database/data-source.ts",
     "create-migration": "ts-node-dev ./node_modules/typeorm/cli migration:create",
     "reset": "docker stop rentx && docker rm rentx && docker-compose build && docker-compose up",
-    "reset-migrations": "yarn typeorm migration:revert && yarn typeorm migration:run"
+    "reset-migrations": "yarn typeorm migration:revert && yarn typeorm migration:run",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
@@ -27,6 +29,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.0.2",
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
