--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.9",
@@ -31,11 +31,12 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.0.2",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
