--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -d src/database/data-source.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/database/data-source.ts",
     "create-migration": "ts-node-dev ./node_modules/typeorm/cli migration:create",
     "reset": "docker stop rentx && docker rm rentx && docker-compose build && docker-compose up",
     "reset-migrations": "yarn typeorm migration:revert && yarn typeorm migration:run",
@@ -33,6 +33,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.0",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "*"
   },
   "dependencies": {
