--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "reset-migrations": "yarn typeorm migration:revert && yarn typeorm migration:run",
     "run-migrations": "yarn typeorm migration:run",
     "test": "jest",
-    "seed:admin": "ts-node-dev -r tsconfig-paths/register src/shared/infra/typeorm/seed/admin.ts"
+    "seed:admin": "ts-node-dev -r tsconfig-paths/register src/shared/infra/typeorm/seed/admin.ts",
+    "clean-project": "rm -rf ./node_modules && yarn install"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -19,6 +20,7 @@
     "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -41,6 +43,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
+    "dayjs": "^1.11.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -50,6 +53,7 @@
     "swagger-ui-express": "^4.5.0",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "supertest": "^6.3.0"
   }
 }
